# csi-analysis

./: .deployignore  .dockerignore  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_MAC.md  README.md  docker-compose.prod.yml  docker-compose.yml  start.sh
.claude/: settings.local.json
.serena/: project.yml
backend/: .env.development.example  .env.example  .env.production.example  .flake8  Dockerfile  Dockerfile.prod  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  run_migrations.py
claudedocs/: cleanup-report.md  code-analysis-report.md  improvement-phase2-partial-report.md
docs/: API_REFERENCE.md  AUTO_DEPLOYMENT_GUIDE.md  BLOCKCHAIN_ZKP_INTEGRATION.md  CI_CD.md  QUICKSTART.md  README.md  SETUP_BLOCKCHAIN.md  TEST_RESULTS.md  ZKP_DEPLOYMENT_ARCHITECTURE.md  ZKP_PIPELINE_EXTENSION_IDEAS.md  backend-architecture.md  blockchain-integration-plan.md  csi_breathing_rate_papers.md  research_plan.md  wifi_csi_multi_person_breathing_papers.md  zkp-breathing-analysis-integration.md  zkp-integration-design.md  zkp-phase1-implementation.md
frontend/: .env.example  .env.local.docker  .env.prod  Dockerfile  Dockerfile.prod  eslint.config.mjs  package-lock.json  package.json
ganache/: Dockerfile
nginx/: dev.conf  prod.conf
sample/: analyze_breathing_with_similarity.py  breathing_analysis_result.json  esp32_csi_analysis_result.json  generate_sample_csi.py  parse_esp32_csi.py  realtime_simulator.py  test_data.txt  (+2 more)
zkvm/core/: Cargo.toml
zkvm/core/src/: lib.rs
zkvm/host/: Cargo.toml
zkvm/host/src/: main.rs
(+279 files in other folders)
