[package]
name = "csi-zkvm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libm = "0.2"
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.10", default-features = false }

[features]
default = ["std"]
std = ["serde/std", "sha2/std"]

