[package]
name = "csi-zkvm-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1.3"
csi-zkvm-core = { path = "../core" }
csi-zkvm-methods = { path = "../methods" }
risc0-zkvm = { version = "3.0.5", features = ["prove"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
